# cdi-guardrail

./: CHANGELOG.md  OPEN_SOURCE_COMMERCIAL.md  README.md  THEORY.md  pyproject.toml
cdi_guardrail/: __init__.py  boundary.py  boundary_stability.py  boundary_vector.py  calibrator.py  cdi_logging.py  drift.py  monitor.py  policy.py  pressure.py  pressure_fast.py  prometheus_adapter.py  scorer.py  statistics.py  test_boundary_sensitivity.py  test_cdi_guardrail.py  test_fast_vs_full_ranking.py  test_forward_detailed.py  test_logging.py  test_monitor_and_drift.py  test_prometheus_adapter.py  wrapper.py
notes/: epistemic_integrity.md
