[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdi-guardrail"
version = "0.1.0"
description = "Defensible risk evidence for deployed machine learning models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Pranav Kumar" }
]

keywords = [
    "machine-learning",
    "model-risk",
    "risk-evidence",
    "model-governance",
    "audit",
    "drift-detection",
    "ml-safety"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "torch>=1.13"
]

[project.optional-dependencies]
prometheus = [
    "prometheus-client>=0.17"
]

[project.urls]
Documentation = "https://github.com/Pranav-Kumar-001/cdi-guardrail"
Source = "https://github.com/Pranav-Kumar-001/cdi-guardrail"
Issues = "https://github.com/Pranav-Kumar-001/cdi-guardrail/issues"

[tool.setuptools.packages.find]
where = ["."]
